0.5.2 (12/??/2012):
-------------------

- Added identifying screen header to line editor.

- Added "textmode" refind.conf parameter to set the text mode used in
  text-only displays, and for the line editor and boot-time handoff
  display even in graphics mode.

- Fixed bug that caused tools (shell, etc.) to launch when they were
  highlighted and F2 or Insert was pressed.

- Added hints text to rEFInd main menu and sub-menus. This can be disabled
  by setting the new "hints" option to the "hideui" token in refind.conf.

- Added "boot with minimal options" entry to refind_linux.conf file
  generated by install.sh. This entry boots without the options extracted
  from the /etc/default/grub file.

- Fixed bug in install.sh that prevented creation of refind_linux.conf file
  on Linux systems.

0.5.1.1 (12/12/2012):
---------------------

- Fixed bug in install.sh that prevented it from working on OS X.

0.5.1 (12/11/2012):
-------------------

- Added support for "0" options to "textonly" and "scan_all_linux_kernels"
  to reverse the usual meaning of these tokens. This is useful for
  including these options in a secondary configuration file called with the
  new "include" token to override a setting set in the main file.

- Added "include" token for refind.conf, to enable including a secondary
  configuration file from a primary one.

- Modified install.sh so that it creates a simple refind_linux.conf file in
  /boot, if that file doesn't already exist and if install.sh is run from
  Linux. If that directory happens to be on a FAT, HFS+, ext2fs, ext3fs, or
  ReiserFS volume, and if the necessary drivers are installed, the result
  is that rEFInd will detect the Linux installation with no further
  configuration on many systems. (Some may still require tweaking of kernel
  options, though; for instance, adding "dolvm" on Gentoo systems that use
  LVM.)

- Added --shim and --localkeys options to install.sh to help simplify setup
  on systems with Secure Boot active.
